objects/Activity.object
<CustomObject>
    <fields>
        <fullName>Activity_Attachment_ID__c</fullName>
        <label>Activity Attachment ID</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Acutual_Time_Spent_Hrs__c</fullName>
        <label>Actual Time Spent (Hrs)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Am_i_Activity_Owners_Manager__c</fullName>
        <formula>IF(OR(Owner:User.ManagerId = $User.Id,Owner:User.Manager.ManagerId = $User.Id,Owner:User.Manager.Manager.ManagerId = $User.Id),&quot;Yes&quot;, &quot;No&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Am i Activity Owners Manager</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Appointment_Date__c</fullName>
        <label>Appointment Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Appointment_Time__c</fullName>
        <label>Appointment Time</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BOS_Product__c</fullName>
        <label>BOS Product</label>
        <picklist>
            <controllingField>Request_Sub_Category__c</controllingField>
            <picklistValues>
                <fullName>Inverter</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Module</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Monitoring</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Solrif</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>T10</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>T5</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Business_Model__c</fullName>
        <label>Business Model</label>
        <picklist>
            <picklistValues>
                <fullName>RLC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Components</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Call_Result__c</fullName>
        <label>Call Result</label>
        <picklist>
            <controllingField>Status</controllingField>
            <picklistValues>
                <fullName>1º Call</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2º Call</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3º Call</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Customer Not Available</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Customer Not Reachable</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Customer Participated</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Call_Subcategory__c</fullName>
        <label>Call Subcategory</label>
        <picklist>
            <controllingField>Type_Of_Calls__c</controllingField>
            <picklistValues>
                <fullName>Accounts Payable</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Accounts Receivable</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Alliance Contract</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Alliance Program Specifics</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Amendment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Appointment follow-up</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Billing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Billing and Insurance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BIPVs (canopy, parking lot, building walls, skylights)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Business/Industrial installation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cancelled/Declined CS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Contract</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Contract Cancellation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Contract Interpretation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Converted Opportunity</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Countersignature Lease Doc</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Countersignature Rebate Form</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Credit Check/Credit Reference</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Credit Check/Evaluation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Customized Panels (solar cars/boats/other applications)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dealer Funding</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dealer Share</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Delivery</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Design</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Distributorship</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Do-It-Yourself</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Donation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DP Fund</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Echosign</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Employee Verification</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Call_Type__c</fullName>
        <description>Call Type</description>
        <label>Call Type2</label>
        <picklist>
            <picklistValues>
                <fullName>Inbound</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Outbound</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Email</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Documentation</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Complete__c</fullName>
        <label>% Complete</label>
        <picklist>
            <picklistValues>
                <fullName>0</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>10</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>20</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>30</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>40</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>50</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>60</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>70</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>80</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>90</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>100</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Completed_By__c</fullName>
        <description>For CTI user, to enter the name of user who marked the task completed</description>
        <label>Completed By</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Completed_Date__c</fullName>
        <description>Date the task was completed.</description>
        <label>Completed Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Created_Date_Time__c</fullName>
        <description>This Field Shows the Created Date Time in Reports.</description>
        <formula>CreatedDate</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Created Date Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Date_Received__c</fullName>
        <description>Date Received</description>
        <label>Date Received</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Due_DateTime__c</fullName>
        <description>Sangita recreated this field after accidentally deleting it. Capgemini uses it for reporting</description>
        <label>Due Date Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Due_Date_SA_Report__c</fullName>
        <label>Due Date SA Report</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Due_Date__c</fullName>
        <formula>Requested_Date_Due_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>EST__c</fullName>
        <displayFormat>ESR-{0}</displayFormat>
        <label>ESR #</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>Estimated_BOS_W__c</fullName>
        <label>Estimated BOS ($/W)</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>External_Contact__c</fullName>
        <label>External Contact</label>
        <length>99</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FCR__c</fullName>
        <label>FCR</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NFCR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Transfer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Follow-up</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Five9__Five9ANI__c</fullName>
        <label>Five9 ANI</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Five9__Five9AgentExtension__c</fullName>
        <label>Five9 Agent Extension</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Five9__Five9AgentName__c</fullName>
        <label>Five9 Agent Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Five9__Five9Agent__c</fullName>
        <label>Five9 Agent</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Five9__Five9CallType__c</fullName>
        <label>Five9 Call Type</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Five9__Five9CallbackCampaignId__c</fullName>
        <label>Five9CallbackCampaignId</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Five9__Five9CallbackCampaignName__c</fullName>
        <label>Five9CallbackCampaignName</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Five9__Five9CallbackId__c</fullName>
        <label>Five9CallbackId</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Five9__Five9CallbackNumber__c</fullName>
        <label>Five9CallbackNumber</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Five9__Five9Campaign__c</fullName>
        <label>Five9 Campaign</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Five9__Five9Cost__c</fullName>
        <label>Five9 Cost</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Five9__Five9DNIS__c</fullName>
        <label>Five9 DNIS</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Five9__Five9HandleTime__c</fullName>
        <label>Five9 Handle Time</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Five9__Five9SessionId__c</fullName>
        <label>Five9 Session Id</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Five9__Five9WrapTime__c</fullName>
        <label>Five9 After Call Work Time</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Hours_Spent__c</fullName>
        <label>Hours Spent</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>If_Complaints_SLA__c</fullName>
        <label>If Complaints (SLA)</label>
        <picklist>
            <picklistValues>
                <fullName>P1 – Initial Response</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>P5 – Follow up update</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>P30 - Close</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Integration_ID__c</fullName>
        <externalId>true</externalId>
        <label>Integration ID</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Internal_Contact__c</fullName>
        <label>Internal Contact</label>
        <length>99</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Modules__c</fullName>
        <label>Modules</label>
        <length>99</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Mounting_System__c</fullName>
        <label>Mounting System</label>
        <picklist>
            <picklistValues>
                <fullName>Carport/Fixed Tilt</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Elevated Tracker</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fixed Tilt</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GFT-0</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GFT-10</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GFT-20</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GFT-25</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GFT-30</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mixed Products</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PowerGuard</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PG</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>RMR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>T0</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>T-0 V1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>T5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>T10</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>T20</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>T-20 V2.1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>T-20 V2.2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>T-20 V2.3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Others</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GFT – 7.5 DG</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GFT – 7.5 UPP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GFT – 20 DG</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GFT – 20 UPP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>S10</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>D10</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Oasis C1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Oasis C7</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Oasis DG</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Number_of_Interaction__c</fullName>
        <label>Number of Interaction</label>
        <picklist>
            <controllingField>Request_Sub_Category__c</controllingField>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>7</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>8</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>9</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>10</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>11</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>12</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>13</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>14</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>15</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>16</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>17</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>18</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>19</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>20</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Opportunity_Name__c</fullName>
        <label>Opportunity Name</label>
        <length>120</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PSR_Comments__c</fullName>
        <label>PSR Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>PSR_ID__c</fullName>
        <label>PSR ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Power_kWp__c</fullName>
        <description>Power (kWp)</description>
        <label>Power (kWp)</label>
        <precision>14</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Priority__c</fullName>
        <label>Priority</label>
        <picklist>
            <picklistValues>
                <fullName>High</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Normal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Low</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Private_Subject__c</fullName>
        <label>Private Subject</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Private__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Checkbox to designate the task as private.</description>
        <label>Private</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Product_Type__c</fullName>
        <description>Recreated after deleting it acceidentally</description>
        <label>Product Type</label>
        <length>99</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Promised_Date__c</fullName>
        <description>Promised Date</description>
        <label>Promised Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Region__c</fullName>
        <label>Region</label>
        <picklist>
            <picklistValues>
                <fullName>Americas</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>APAC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Europe</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MEA</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Request_Category__c</fullName>
        <label>Request Category</label>
        <picklist>
            <controllingField>Task_Type__c</controllingField>
            <picklistValues>
                <fullName>Civil Engineering</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Commercial Design Team</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Corporate Support</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cost RDTN</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Customer Advocacy</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Design Engineer - D&amp;E</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Design Engineer - Eng</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Design Engineering</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Development Engineering</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Discipline Engineer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Discipline Engineer - D&amp;E</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Discipline Engineer - Eng</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Due Diligence</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Electrical Design</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Electrical Engineering</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Estimating</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Field Support</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>General &amp; Administration</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>General &amp; Administrative</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Holiday</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>O&amp;M Support</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>O&amp;M Support (EA)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Operations &amp; Standards</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Partner Support</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Performance Support</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Product Engineering</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PTO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>RLC Support</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sales Support</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Request_Sub_Category__c</fullName>
        <label>Request Sub-Category</label>
        <picklist>
            <controllingField>Request_Category__c</controllingField>
            <picklistValues>
                <fullName>100% Plan Check Documents</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>25% Schematic Design Documents</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>30% QA/QC Design Review Checklist</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>50% Design Documents</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>50% Design Review</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>75% Design Kickoff</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>90% Design Documents</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>90% Design Review</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>90% QA/QC Design Review Checklist</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>90% Review Documents</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AC Electrical Design</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ad Hoc</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Administrative</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AHJ Response Documents</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Alignment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Alternate Design Review</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Annual Report</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Array Layout</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>As - Built Drawing Package</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Attending to training</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ballast &amp; Anchor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Basic Design</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BID Documents</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BOM and Estimating Support - Electrical</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BOM Creation/Revision</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BOS + PV Preliminary Version</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BOS + PV Revised Version</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>bPAD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Budget Approval</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Budgetary Quote</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Request_Sub_Category_text__c</fullName>
        <formula>text( Request_Sub_Category__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Request Sub-Category(text)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Requested_By__c</fullName>
        <label>Requested By</label>
        <length>99</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Requested_Date_Due_Date__c</fullName>
        <label>Requested Date (Due Date)</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Resolution_Comments__c</fullName>
        <label>Resolution Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Revision__c</fullName>
        <description>Sangita accidentally deleted it</description>
        <label>Revision:</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SPOTS_Attachments__c</fullName>
        <formula>if(
LEN(Activity_Attachment_ID__c)==0, 
&quot;None&quot;, 
HYPERLINK(&quot;https://na29.salesforce.com/&quot;&amp; Activity_Attachment_ID__c, &quot;View&quot;) )</formula>
        <label>SPOTS Attachments</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SP_Week__c</fullName>
        <label>SP Week</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SSO_Designer__c</fullName>
        <label>SSO Designer</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>SSO_Instructions_Cont__c</fullName>
        <label>SSO Instructions (Cont.)</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>SSO_Instructions__c</fullName>
        <label>SSO Instructions</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>SSO_Internal_Due_Date_Time__c</fullName>
        <label>SSO Internal Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>SSO_Overtime_Rendered_HR__c</fullName>
        <description>Sangita recreated after accidentally deleting it.</description>
        <label>SSO Overtime Rendered (HR)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
</CustomObject>